Working (minus crc)

--- a/hdl/src/Makefile
+++ b/hdl/src/Makefile
@@ -1,5 +1,5 @@
 VERILATOR = verilator
-VERILATOR_FLAGS = --trace --cc --exe
+VERILATOR_FLAGS = --trace --cc --exe -CFLAGS '-Wall -Werror -Wextra -g'
 
 VERILOG_TOP = eth_framer.v
 #VERILOG_SOURCES = eth_framer.v vector_to_axis.v axis_joiner.v
@@ -11,3 +11,6 @@ run:
 	$(VERILATOR) $(VERILATOR_FLAGS) $(VERILOG_TOP) $(CPP_SOURCES)
 
 	$(MAKE) -j 4 -C obj_dir -f Veth_framer.mk
+
+clean:
+	rm -r obj_dir
