--- a/hdl/src/Makefile
+++ b/hdl/src/Makefile
@@ -1,14 +1,15 @@
 VERILATOR = verilator
-VERILATOR_FLAGS = --trace --cc --exe -CFLAGS '-Wall -Werror -Wextra -g'
+#VERILATOR_FLAGS = --trace --cc --exe -CFLAGS '-Wall -Werror -Wextra -g'
+VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g'
 
-VERILOG_TOP = eth_framer.v
-#VERILOG_SOURCES = eth_framer.v vector_to_axis.v axis_joiner.v
+VERILOG_TOP = eth_framer
+VERILOG_SOURCES = eth_framer.v axis_distributor.v axis_joiner.v axis_unpacker.v crc.v vector_to_axis.v
 CPP_SOURCES = test_eth_framer.cpp
 
 default : run
 
 run:
-	$(VERILATOR) $(VERILATOR_FLAGS) $(VERILOG_TOP) $(CPP_SOURCES)
+	$(VERILATOR) $(VERILATOR_FLAGS) $(VERILOG_SOURCES) --top-module $(VERILOG_TOP) $(CPP_SOURCES)
 
 	$(MAKE) -j 4 -C obj_dir -f Veth_framer.mk
 
