--- a/hdl/src/Makefile
+++ b/hdl/src/Makefile
@@ -2,9 +2,10 @@ VERILATOR = verilator
 #VERILATOR_FLAGS = --trace --cc --exe -CFLAGS '-Wall -Werror -Wextra -g'
 VERILATOR_FLAGS = --trace --cc --exe --l2-name v -CFLAGS '-Wall -Wextra -g'
 
-VERILOG_TOP = eth_framer
-VERILOG_SOURCES = eth_framer.v axis_distributor.v axis_joiner.v axis_unpacker.v crc.v vector_to_axis.v
-CPP_SOURCES = test_eth_framer.cpp
+VERILOG_TOP = eth_test
+VERILOG_SOURCES = eth_test.v
+#VERILOG_SOURCES = eth_framer.v axis_distributor.v axis_joiner.v axis_unpacker.v crc.v vector_to_axis.v
+CPP_SOURCES = test_eth_test.cpp
 
 default : run
 
